--- a/wj/src/main/resources/application.properties
+++ b/wj/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8443
 # 数据源配置
 spring.datasource.url=jdbc:mysql://localhost:3306/white_jotter?characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=nishengri
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 每次运行时初始化数据库，如不需要可以注释掉
+# 每次运行时初始化数据库，可以注释掉
 # spring.datasource.initialization-mode=always
 
 # 将 hibernate 的自动注入属性设置为 none（防止冲突，上面已经使用了 spring 的注入方法）
