--- a/wj/src/main/resources/application.properties
+++ b/wj/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8443
 # 数据源配置
 spring.datasource.url=jdbc:mysql://localhost:3306/white_jotter?characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=nishengri
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 每次运行时初始化数据库，可以注释掉
